# pulse-analytics

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
dbt/: dbt_project.yaml  dbt_project.yml  profiles.yaml  profiles.yml
dbt/macros/: prefix_columns.sql
dbt/models/marts/: device_statistics_cycle.sql  device_statistics_step.sql  device_telemetry.sql  marts.yaml  part_statistics_cycle.sql  part_statistics_step.sql  part_telemetry.sql  schema.yml  test_statistics_cycle.sql  test_statistics_step.sql  test_telemetry.sql
dbt/models/sources/: device_metadata.sql  device_part_tests.sql  device_test_part.sql  device_test_recipe.sql  part_metadata.sql  recipe_metadata.sql  schema.yml  sources.yaml  statistics_cycle.sql  statistics_step.sql  telemetry.sql
examples/: dbt-config.yaml  dbt-job.yaml  superset-setup.yaml  superset.yaml  telemetry-generator.yaml  telemetry-statistics.yaml
scripts/: setup.sh
src/pulse_analytics/: __init__.py  dbt.py  superset.py
tests/: conftest.py  test_marts.py  test_sources.py  test_telemetry.py
tests/manifests/: dbt-job.yaml  hive.yaml  trino.yaml
tests/scripts/: launch_dbt_kubernetes.sh  launch_dbt_local.sh  setup_kubernetes.sh
